--- a/src/components/chat/select-model/SelectModel.astro
+++ b/src/components/chat/select-model/SelectModel.astro
@@ -12,11 +12,8 @@
             aria-label="Default select example"
         >
             <option value="tiny" selected>TinyLLama - 839.98 VRAM</option>
-            <option value="gemma_2">Gemma - 1476.52 VRAM</option>
             <option value="gemma">Gemma - 1750.66 VRMA</option>
-            <option value="phi">Phi - 3053.97 VRAM</option>
-            <option value="hermes">Hermes - 4976.13 VRAM</option>
-            <option value="llama">LLama - 5295.7 VRAM</option>
+            <option value="stable">Stable - 2999.33 VRAM</option>
         </select>
     </label>
     <button type="submit">Seleccionar</button>
