Errores de rutas

--- a/src/components/chat/load-engine-modal/ModalEngine.astro
+++ b/src/components/chat/load-engine-modal/ModalEngine.astro
@@ -18,7 +18,7 @@
         align-content: center;
         user-select: none;
         & .modal-content {
-            height: min-content;
+            height: 500px;
             align-items: center;
             > img {
                 transform: scale(0.6);
