--- a/src/components/session/Session.astro
+++ b/src/components/session/Session.astro
@@ -6,11 +6,11 @@ import { SignIn } from "auth-astro/components";
 <div class="session_container">
     <h1>Ingresar</h1>
     <SignIn provider="google" class="session_btn google">
-        <img src="/public/icons/google.svg" alt="logo google" />
+        <img src="/icons/google.svg" alt="logo google" />
         <span>Ingresar con Google</span>
     </SignIn>
     <SignIn provider="github" class="session_btn github">
-        <img src="/public/icons/github.svg" alt="logo github" />
+        <img src="/icons/github.svg" alt="logo github" />
         <span>Ingresar con GitHub</span>
     </SignIn>
 </div>
