--- a/src/components/chat/ChatIA.astro
+++ b/src/components/chat/ChatIA.astro
@@ -11,7 +11,7 @@ const user_name = session.user.name!.split(" ")[0] ?? "";
     <ul class="container_messages">
         <li class="message bot">
             <div>
-                <img src="../../../public/bot.png" class="sender_image" />
+                <img src="/bot.png" class="sender_image" />
                 <span>Bot</span>
             </div>
             <p>Hola {user_name}, en que puedo ayudarte?</p>
