--- a/src/components/chat/load-engine-modal/ModalEngine.astro
+++ b/src/components/chat/load-engine-modal/ModalEngine.astro
@@ -5,7 +5,7 @@
 <div class="modal" tabindex="-1" id="myModal">
     <div class="modal-dialog">
         <div class="modal-content">
-            <img src="../../../../public/icons/load.svg" />
+            <img src="/icons/load.svg" />
             <span class="content-load-engine">Descargando recursos...</span>
         </div>
     </div>
@@ -19,7 +19,9 @@
         user-select: none;
         & .modal-content {
             height: 500px;
+            display: flex;
             align-items: center;
+            justify-content: center;
             > img {
                 transform: scale(0.6);
             }
